--- a/static/index.html
+++ b/static/index.html
@@ -2,16 +2,19 @@
 <html lang="zh-Hant">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>最新匯率一覽表</title>
+<title>本日即時匯率表</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <div class="container py-4" style="max-width:620px">
-  <h3 class="mb-4 text-center">🌐 本日即時匯率表</h3>
+  <h3 class="text-center mb-4">🌐 本日即時匯率表</h3>
+
   <div class="mb-3">
     <label class="form-label">基準貨幣</label>
     <select id="base" class="form-select" style="max-width:180px">
       <option>USD</option><option>TWD</option><option>JPY</option>
       <option>EUR</option><option>CNY</option><option>HKD</option>
+      <option>GBP</option><option>AUD</option><option>SGD</option>
+      <option>KRW</option>
     </select>
   </div>
 
@@ -25,28 +28,33 @@
 </div>
 
 <script>
-const API = "https://exchange-api-omg7.onrender.com/convert";   // 你的後端
+const API = "/convert";                                   // ✔ 同一主機相對路徑
 const symbols = ["USD","TWD","JPY","EUR","CNY","HKD","GBP","AUD","SGD","KRW"];
+
 const baseSel = base, tbody = document.getElementById('tbody'), baseLabel = baseLabel;
 
 baseSel.addEventListener("change", loadRates);
-loadRates();                // 首次載入
+loadRates();                                              // 首次載入
 
 async function loadRates(){
   const b = baseSel.value;
   baseLabel.textContent = b;
   tbody.innerHTML = '<tr><td colspan="2">載入中…</td></tr>';
   const rows = [];
+
   for(const s of symbols){
-    if(s===b) continue;
+    if(s === b) continue;
     try{
       const url=`${API}?from=${b}&to=${s}&amount=1`;
-      const {result} = await fetch(url).then(r=>r.json());
-      rows.push(`<tr><td>${s}</td><td class="text-end">${result.toFixed(4)} ${s}</td></tr>`);
-    }catch{
+      const r = await fetch(url).then(r=>r.json());
+      if(r.result === undefined) throw r;
+      rows.push(`<tr><td>${s}</td><td class="text-end">${r.result.toFixed(4)} ${s}</td></tr>`);
+    }catch(e){
       rows.push(`<tr><td>${s}</td><td class="text-end text-warning">錯誤</td></tr>`);
+      console.error("convert error", s, e);
     }
   }
+
   tbody.innerHTML = rows.join("");
   document.getElementById('ts').textContent = "更新時間：" + new Date().toLocaleString();
 }
