--- a/static/index.html
+++ b/static/index.html
@@ -1,65 +1,84 @@
 <!doctype html>
 <html lang="zh-Hant">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>本日即時匯率表</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>本日即時匯率表</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+  <div class="container py-4" style="max-width:620px">
+    <h3 class="text-center mb-4">🌐 本日即時匯率表</h3>
 
-<div class="container py-4" style="max-width:620px">
-  <h3 class="text-center mb-4">🌐 本日即時匯率表</h3>
+    <div class="mb-3">
+      <label class="form-label">基準貨幣</label>
+      <select id="base" class="form-select" style="max-width:180px">
+        <option>USD</option><option>TWD</option><option>JPY</option>
+        <option>EUR</option><option>CNY</option><option>HKD</option>
+        <option>GBP</option><option>AUD</option><option>SGD</option>
+        <option>KRW</option>
+      </select>
+    </div>
 
-  <div class="mb-3">
-    <label class="form-label">基準貨幣</label>
-    <select id="base" class="form-select" style="max-width:180px">
-      <option>USD</option><option>TWD</option><option>JPY</option>
-      <option>EUR</option><option>CNY</option><option>HKD</option>
-      <option>GBP</option><option>AUD</option><option>SGD</option>
-      <option>KRW</option>
-    </select>
+    <table class="table table-striped align-middle">
+      <thead class="table-light">
+        <tr>
+          <th>貨幣</th>
+          <th class="text-end">1&nbsp;<span id="baseLabel">USD</span> 可換</th>
+        </tr>
+      </thead>
+      <tbody id="tbody">
+        <tr><td colspan="2">載入中…</td></tr>
+      </tbody>
+    </table>
+    <p class="text-end text-muted" style="font-size:smaller" id="ts"></p>
   </div>
 
-  <table class="table table-striped align-middle">
-    <thead class="table-light">
-      <tr><th>貨幣</th><th class="text-end">1&nbsp;<span id="baseLabel">USD</span> 可換</th></tr>
-    </thead>
-    <tbody id="tbody"><tr><td colspan="2">載入中…</td></tr></tbody>
-  </table>
-  <p class="text-end text-muted" style="font-size:smaller" id="ts"></p>
-</div>
+  <script>
+    // 同源呼叫 /convert，不會有 CORS 或 API_KEY 問題
+    const API = "/convert";
+    const symbols = ["USD","TWD","JPY","EUR","CNY","HKD","GBP","AUD","SGD","KRW"];
 
-<script>
-const API = "https://api.exchangerate.host/latest";   // 免費端點，不須 XRATE_KEY
-const symbols = ["USD","TWD","JPY","EUR","CNY","HKD","GBP","AUD","SGD","KRW"];
+    // 抓到 DOM
+    const baseSel   = document.getElementById('base');
+    const tbody     = document.getElementById('tbody');
+    const baseLabel = document.getElementById('baseLabel');
+    const ts        = document.getElementById('ts');
 
-// 正確抓 DOM
-const baseSel = document.getElementById('base');
-const tbody   = document.getElementById('tbody');
-const baseLbl = document.getElementById('baseLabel');
-const ts      = document.getElementById('ts');
+    baseSel.addEventListener("change", loadRates);
+    loadRates();  // 首次載入
 
-baseSel.addEventListener("change", loadRates);
-loadRates();                 // 首次載入
+    async function loadRates(){
+      const base = baseSel.value;
+      baseLabel.textContent = base;
+      // 先清掉表格
+      tbody.innerHTML = '<tr><td colspan="2">載入中…</td></tr>';
 
-async function loadRates(){
-  const base = baseSel.value;
-  baseLbl.textContent = base;
-  tbody.innerHTML = '<tr><td colspan="2">載入中…</td></tr>';
+      const rows = [];
+      for(const s of symbols){
+        if(s === base) continue;
+        try {
+          const url = `${API}?from=${base}&to=${s}&amount=1`;
+          const result = await fetch(url).then(r => r.json());
+          rows.push(`
+            <tr>
+              <td>${s}</td>
+              <td class="text-end">${result.result.toFixed(4)} ${s}</td>
+            </tr>
+          `);
+        } catch(e){
+          rows.push(`
+            <tr>
+              <td>${s}</td>
+              <td class="text-end text-warning">錯誤</td>
+            </tr>
+          `);
+        }
+      }
 
-  try{
-    // 一次抓全部匯率
-    const url = `${API}?base=${base}&symbols=${symbols.filter(s=>s!==base).join(",")}`;
-    const { rates } = await fetch(url).then(r=>r.json());
-
-    const rows = Object.entries(rates).map(
-      ([k,v]) => `<tr><td>${k}</td><td class="text-end">${v.toFixed(4)} ${k}</td></tr>`
-    ).join("");
-
-    tbody.innerHTML = rows;
-  }catch(e){
-    console.error("rate load error:", e);
-    tbody.innerHTML = '<tr><td colspan="2" class="text-warning">服務暫時不可用</td></tr>';
-  }
-
-  ts.textContent = "更新時間：" + new Date().toLocaleString();
-}
-</script>
+      tbody.innerHTML = rows.join("");
+      ts.textContent = "更新時間：" + new Date().toLocaleString();
+    }
+  </script>
+</body>
+</html>
