--- a/static/index.html
+++ b/static/index.html
@@ -7,79 +7,66 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container py-4" style="max-width:620px">
-    <h3 class="text-center mb-4">🌐 本日即時匯率表</h3>
+<div class="container py-4" style="max-width:620px">
+  <h3 class="text-center mb-4">🌐 本日即時匯率表</h3>
 
-    <div class="mb-3">
-      <label class="form-label">基準貨幣</label>
-      <select id="base" class="form-select" style="max-width:180px">
-        <option>USD</option><option>TWD</option><option>JPY</option>
-        <option>EUR</option><option>CNY</option><option>HKD</option>
-        <option>GBP</option><option>AUD</option><option>SGD</option>
-        <option>KRW</option>
-      </select>
-    </div>
-
-    <table class="table table-striped align-middle">
-      <thead class="table-light">
-        <tr>
-          <th>貨幣</th>
-          <th class="text-end">1 <span id="baseLabel">USD</span> 可換</th>
-        </tr>
-      </thead>
-      <tbody id="tbody">
-        <tr><td colspan="2">載入中…</td></tr>
-      </tbody>
-    </table>
-    <p class="text-end text-muted" style="font-size:smaller" id="ts"></p>
+  <div class="mb-3">
+    <label class="form-label">基準貨幣</label>
+    <select id="base" class="form-select" style="max-width:180px">
+      <option>USD</option><option>TWD</option><option>JPY</option>
+      <option>EUR</option><option>CNY</option><option>HKD</option>
+      <option>GBP</option><option>AUD</option><option>SGD</option>
+      <option>KRW</option>
+    </select>
   </div>
 
-  <script>
-    // ← 一定要改成同源的 /convert
-    const API = "/convert";
-    const symbols = ["USD","TWD","JPY","EUR","CNY","HKD","GBP","AUD","SGD","KRW"];
+  <table class="table table-striped align-middle">
+    <thead class="table-light">
+      <tr><th>貨幣</th><th class="text-end">1&nbsp;<span id="baseLabel">USD</span> 可換</th></tr>
+    </thead>
+    <tbody id="tbody"><tr><td colspan="2">載入中…</td></tr></tbody>
+  </table>
+  <p class="text-end text-muted" style="font-size:smaller" id="ts"></p>
+</div>
 
-    const baseSel   = document.getElementById('base');
-    const tbody     = document.getElementById('tbody');
-    const baseLabel = document.getElementById('baseLabel');
-    const ts        = document.getElementById('ts');
+<script>
+const API = "/latest";             // 同源呼叫，不用 CORS
+const symbols = ["USD","TWD","JPY","EUR","CNY","HKD","GBP","AUD","SGD","KRW"];
 
-    baseSel.addEventListener("change", loadRates);
-    loadRates();
+const baseSel = document.getElementById('base');
+const tbody   = document.getElementById('tbody');
+const baseLbl = document.getElementById('baseLabel');
+const ts      = document.getElementById('ts');
 
-    async function loadRates(){
-      const base = baseSel.value;
-      baseLabel.textContent = base;
-      tbody.innerHTML = '<tr><td colspan="2">載入中…</td></tr>';
+baseSel.addEventListener("change", loadRates);
+loadRates();
 
-      const rows = [];
-      for(const s of symbols){
-        if (s === base) continue;
-        try {
-          // 呼叫自己後端的 /convert
-          const url = `${API}?from=${base}&to=${s}&amount=1`;
-          const data = await fetch(url).then(r=>{
-            if (!r.ok) throw new Error(r.status);
-            return r.json();
-          });
-          rows.push(`
-            <tr>
-              <td>${s}</td>
-              <td class="text-end">${data.result.toFixed(4)} ${s}</td>
-            </tr>`);
-        } catch (e) {
-          console.error("load error", s, e);
-          rows.push(`
-            <tr>
-              <td>${s}</td>
-              <td class="text-end text-warning">錯誤</td>
-            </tr>`);
-        }
-      }
+async function loadRates(){
+  const base = baseSel.value;
+  baseLbl.textContent = base;
+  tbody.innerHTML = '<tr><td colspan="2">載入中…</td></tr>';
 
-      tbody.innerHTML = rows.join("");
-      ts.textContent = "更新時間：" + new Date().toLocaleString();
-    }
-  </script>
+  try {
+    // 一次抓全部匯率
+    const url = `${API}?base=${base}&symbols=${symbols.filter(s=>s!==base).join(",")}`;
+    const { rates } = await fetch(url).then(r=>r.json());
+
+    const rows = Object.entries(rates).map(
+      ([k,v]) => `<tr>
+                    <td>${k}</td>
+                    <td class="text-end">${v.toFixed(4)} ${k}</td>
+                  </tr>`
+    ).join("");
+
+    tbody.innerHTML = rows;
+
+  } catch(e) {
+    console.error("rate load error:", e);
+    tbody.innerHTML = '<tr><td colspan="2" class="text-warning">服務暫時不可用</td></tr>';
+  }
+
+  ts.textContent = "更新時間：" + new Date().toLocaleString();
+}
+</script>
 </body>
 </html>
