--- a/static/index.html
+++ b/static/index.html
@@ -30,13 +30,13 @@
 </div>
 
 <script>
-const API = "/latest";             // 同源呼叫，不用 CORS
+const API = "/latest";              // ← 同源呼叫 /latest
 const symbols = ["USD","TWD","JPY","EUR","CNY","HKD","GBP","AUD","SGD","KRW"];
 
-const baseSel = document.getElementById('base');
-const tbody   = document.getElementById('tbody');
-const baseLbl = document.getElementById('baseLabel');
-const ts      = document.getElementById('ts');
+const baseSel = document.getElementById('base'),
+      tbody   = document.getElementById('tbody'),
+      baseLbl = document.getElementById('baseLabel'),
+      ts      = document.getElementById('ts');
 
 baseSel.addEventListener("change", loadRates);
 loadRates();
@@ -47,21 +47,18 @@ async function loadRates(){
   tbody.innerHTML = '<tr><td colspan="2">載入中…</td></tr>';
 
   try {
-    // 一次抓全部匯率
+    // 呼叫後端 /latest
     const url = `${API}?base=${base}&symbols=${symbols.filter(s=>s!==base).join(",")}`;
-    const { rates } = await fetch(url).then(r=>r.json());
+    const data = await fetch(url).then(r=>r.json());
+    if (!data.success) throw new Error(data.error?.info||"No data");
 
-    const rows = Object.entries(rates).map(
-      ([k,v]) => `<tr>
-                    <td>${k}</td>
-                    <td class="text-end">${v.toFixed(4)} ${k}</td>
-                  </tr>`
-    ).join("");
-
+    const rows = Object.entries(data.rates)
+      .map(([k,v])=>`<tr><td>${k}</td><td class="text-end">${v.toFixed(4)} ${k}</td></tr>`)
+      .join("");
     tbody.innerHTML = rows;
 
   } catch(e) {
-    console.error("rate load error:", e);
+    console.error(e);
     tbody.innerHTML = '<tr><td colspan="2" class="text-warning">服務暫時不可用</td></tr>';
   }
 
