--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
 <div class="container py-4" style="max-width:620px">
   <h3 class="text-center mb-4">🌐 本日即時匯率表</h3>
 
@@ -22,24 +23,31 @@
 
   <table class="table table-striped align-middle">
     <thead class="table-light">
-      <tr><th>貨幣</th><th class="text-end">1&nbsp;<span id="baseLabel">USD</span> 可換</th></tr>
+      <tr>
+        <th>貨幣</th>
+        <th class="text-end">1&nbsp;<span id="baseLabel">USD</span> 可換</th>
+      </tr>
     </thead>
-    <tbody id="tbody"><tr><td colspan="2">載入中…</td></tr></tbody>
+    <tbody id="tbody">
+      <tr><td colspan="2">載入中…</td></tr>
+    </tbody>
   </table>
+
   <p class="text-end text-muted" style="font-size:smaller" id="ts"></p>
 </div>
 
 <script>
-const API = "/latest";              // ← 同源呼叫 /latest
+const API     = "https://api.exchangerate.host/latest";
 const symbols = ["USD","TWD","JPY","EUR","CNY","HKD","GBP","AUD","SGD","KRW"];
 
-const baseSel = document.getElementById('base'),
-      tbody   = document.getElementById('tbody'),
-      baseLbl = document.getElementById('baseLabel'),
-      ts      = document.getElementById('ts');
+// 抓取 DOM
+const baseSel = document.getElementById('base');
+const tbody   = document.getElementById('tbody');
+const baseLbl = document.getElementById('baseLabel');
+const ts      = document.getElementById('ts');
 
 baseSel.addEventListener("change", loadRates);
-loadRates();
+loadRates();  // 首次載入
 
 async function loadRates(){
   const base = baseSel.value;
@@ -47,23 +55,34 @@ async function loadRates(){
   tbody.innerHTML = '<tr><td colspan="2">載入中…</td></tr>';
 
   try {
-    // 呼叫後端 /latest
+    // 一次抓全部匯率
     const url = `${API}?base=${base}&symbols=${symbols.filter(s=>s!==base).join(",")}`;
-    const data = await fetch(url).then(r=>r.json());
-    if (!data.success) throw new Error(data.error?.info||"No data");
+    const res = await fetch(url);
+    const data = await res.json();
 
+    if (!data.rates) throw new Error("no rates");
+
+    // 把 rates 轉成表格列
     const rows = Object.entries(data.rates)
-      .map(([k,v])=>`<tr><td>${k}</td><td class="text-end">${v.toFixed(4)} ${k}</td></tr>`)
-      .join("");
-    tbody.innerHTML = rows;
+      .map(([k,v]) => 
+        `<tr>
+           <td>${k}</td>
+           <td class="text-end">${v.toFixed(4)} ${k}</td>
+         </tr>`
+      ).join("");
 
-  } catch(e) {
-    console.error(e);
-    tbody.innerHTML = '<tr><td colspan="2" class="text-warning">服務暫時不可用</td></tr>';
+    tbody.innerHTML = rows;
+  } catch(err) {
+    console.error("rate load error:", err);
+    tbody.innerHTML = 
+      `<tr>
+         <td colspan="2" class="text-warning">服務暫時不可用</td>
+       </tr>`;
   }
 
   ts.textContent = "更新時間：" + new Date().toLocaleString();
 }
 </script>
+
 </body>
 </html>
