--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
 <div class="container py-4" style="max-width:620px">
   <h3 class="text-center mb-4">🌐 本日即時匯率表</h3>
 
@@ -23,21 +22,15 @@
 
   <table class="table table-striped align-middle">
     <thead class="table-light">
-      <tr>
-        <th>貨幣</th>
-        <th class="text-end">1&nbsp;<span id="baseLabel">USD</span> 可換</th>
-      </tr>
+      <tr><th>貨幣</th><th class="text-end">1&nbsp;<span id="baseLabel">USD</span> 可換</th></tr>
     </thead>
-    <tbody id="tbody">
-      <tr><td colspan="2">載入中…</td></tr>
-    </tbody>
+    <tbody id="tbody"><tr><td colspan="2">載入中…</td></tr></tbody>
   </table>
-
   <p class="text-end text-muted" style="font-size:smaller" id="ts"></p>
 </div>
 
 <script>
-const API     = "https://api.exchangerate.host/latest";
+const API     = "/latest";   // ← 一定要同源呼叫 /latest 代理
 const symbols = ["USD","TWD","JPY","EUR","CNY","HKD","GBP","AUD","SGD","KRW"];
 
 const baseSel = document.getElementById('base');
@@ -46,7 +39,7 @@ const baseLbl = document.getElementById('baseLabel');
 const ts      = document.getElementById('ts');
 
 baseSel.addEventListener("change", loadRates);
-loadRates();
+loadRates();  // 首次載入
 
 async function loadRates(){
   const base = baseSel.value;
@@ -54,22 +47,23 @@ async function loadRates(){
   tbody.innerHTML = '<tr><td colspan="2">載入中…</td></tr>';
 
   try {
-    const url  = `${API}?base=${base}&symbols=${symbols.filter(s=>s!==base).join(",")}`;
-    const res  = await fetch(url);
+    const url = `${API}?base=${base}&symbols=${symbols.filter(s=>s!==base).join(",")}`;
+    const res = await fetch(url);
+    if (!res.ok) throw new Error(res.status);
     const data = await res.json();
-
-    if (!data.rates) throw "";
+    if (!data.rates) throw new Error("no rates");
 
     tbody.innerHTML = Object.entries(data.rates)
       .map(([k,v])=>`<tr><td>${k}</td><td class="text-end">${v.toFixed(4)} ${k}</td></tr>`)
       .join("");
-  } catch {
+  }
+  catch(e){
+    console.error("rate load error:", e);
     tbody.innerHTML = '<tr><td colspan="2" class="text-warning">服務暫時不可用</td></tr>';
   }
 
   ts.textContent = "更新時間：" + new Date().toLocaleString();
 }
 </script>
-
 </body>
 </html>
